# audio-classification-tf

./: .gitignore  Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
audioclas/: api.py  config.py  data_utils.py  misc.py  model.py  model_utils.py  optimizers.py  paths.py  plot_utils.py  train.py  utils.py  vggish_input.py  vggish_postprocess.py  vggish_slim.py
audioclas/embeddings/: vggish_input.py  vggish_postprocess.py  vggish_slim.py
audioclas/tests/: functional_tests.py  main.py
data/: README.md
data/demo-dataset_files/demo/: classes.txt  train.txt
data/demo-dataset_files/general/: classes.txt  classes_in_DB.txt  num_images.txt  train.txt  val.txt
data/demo_dataset_files/demo/: classes.txt  train.txt
data/samples/: demo.tar.xz
docker/: Dockerfile.dev
docs/: Makefile  conf.py  index.rst  make.bat
etc/: config.yaml
notebooks/: 1.0-Data_exploration.ipynb
