[metadata]
name = audio-classification-tf
summary = An audio classifier with Deep Neural Networks
description-file =
    README.md
author = Ignacio Heredia (CSIC)
author-email = iheredia@ifca.unican.es
version = 0.1
license = MIT
home-page = http://github.com/deephdc/audio-classification-tf
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    audioclas

[entry_points]

deepaas.v2.model =
    audioclas = audioclas.api

